fix feature login, signin